--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
     <title>TinyApp</title>
   </head>
   <body>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -35,6 +36,7 @@
           <% } %>
         </tbody>
       </table>
+      <href ='#'></href>
     </main>
     <!-- Bootstrap JS -->
     <script
