--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,6 +12,7 @@
   </head>
   <href = '#'></href>
   <body>
+    <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
