--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,15 +25,19 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for (let id in urls) { %>
             <tr>
+             <form method="POST" action="/urls/9sm5xK/delete">
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><button type = "submit">Delete</button></td>
+             </form>
             </tr>
-          <% } %>
+            <% } %>
         </tbody>
       </table>
       <href ='#'></href>
