--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,6 +23,22 @@
       </div>
       <div class="card-footer text-muted"></div>
     </div>
+    <div class ="card text-center">
+      <div class="card-header"></div> 
+      <div class="card-body">
+        <h5 class="card-title">Edit</h5>
+        <p class="card-text">
+          
+          <form style="text-align:center" method = "POST" action ="/urls/<%= id %>" type = "text">
+            <label>New URL:</label>
+            <input name = "updatedURL">
+            <button type = "submit" >Edit</button>
+          </form>
+        
+        </p>
+      </div>
+      <div class="card-footer text-muted"></div>
+    </div>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
