implented login form in header and login route in express server

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <form action="/login" method ="POST">
-      <input type="text" username="username" placeholder="username"/>
+      <input type="text" name= "username" placeholder="username"/>
       <button type="submit">Login</button>
     </form>
     <button
