--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,8 +20,8 @@
     </div>
     
   </div>
-  <% if (username) { %>
-    <h3>Logged in as: <%= username %></h3>
+  <% if (user) { %>
+    <h3>Logged in as: <%= user["email"] %></h3>
     <form action="/logout" method ="POST" >
     <button type="submit">Logout</button>
     </form>
