--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -26,9 +26,11 @@
     <button type="submit">Logout</button>
     </form>
     <% } else {%>
-      <form action="/login" method ="POST">
-        <input type="text" name= "username" placeholder="username"/>
+      <form action="/login" method ="GET">
         <button type="submit">Login</button>
+      </form>
+      <form action="/register" method ="GET">
+        <button type="submit">Register</button>
       </form>
       <% } %>
   </nav>
